--- a/perl/Changes
+++ b/perl/Changes
@@ -1,5 +1,8 @@
 Revision history for Data-Rx
 
+0.004     2008-10-04
+          fix packaging issue
+
 0.003     2008-10-04
           document (and facilitate) plugging in extra type libraries
 
