--- a/perl/Changes
+++ b/perl/Changes
@@ -1,6 +1,8 @@
 Revision history for Data-Rx
 
 {{$NEXT}}
+        - update packaging
+        - minimum perl is now Perl v5.12
 
 0.200007  2015-04-10 18:23:08-04:00 America/New_York
         - add some basic docs for how failures and failuresets work
